# infra

./: .envrc  .gitignore  .gitmodules  .sops.yaml  .stignore  Justfile  Makefile  readme.md
nix/: flake.nix  flake_.nix  lib.nix  overlay.nix  pkgs.nix  repair-iso.nix  test.nix
nix/fixes/fetch-yarn-deps/: default.nix  fixup.js  index.js
nix/fixes/wsl/: buildTarball.nix  default.nix  syschdemd.sh
nix/hosts/dedic/: default.nix  docker.nix  hardware-configuration.nix
nix/hosts/ext-ha/: default.nix
nix/hosts/in-ha/: default.nix
nix/hosts/kubic/: default.nix  hardware-configuration.nix  vm.nix
nix/hosts/ly370/: default.nix  hardware-configuration.nix
nix/hosts/netbird-test/: default.nix
nix/hosts/orb-nix/: default.nix
nix/hosts/r7-wsl/: default.nix  vscode-server-env-setup.sh
nix/hosts/rpi4/: hardware-configuration.nix
nix/hosts/rubi-mbp14/: default.nix
nix/hosts/rubi-mbp16m4/: default.nix
nix/hosts/vpn/: default.nix  hardware-configuration.nix  wg.nix
nix/hosts/yatb/: default.nix
nix/images/: lxc-base.nix  repair-iso.nix
nix/lib/: _.nix  debug.nix  default.nix  merge.nix
nix/lib/system/: default.nix  system-options.nix
nix/modules/: base-system-darwin.nix  base-system-vm.nix  base-system.nix  base-user.nix
nix/modules/darwin/: gc-debug.nix  tiling.nix  yggdrasil.nix
nix/modules/default/: device.nix  extra-nix.nix  networking.nix  (+4 more)
nix/pkgs/: cyclopts.nix  dhclient.nix  mongodb-ce.nix  nixfmt-patched.nix  octodns-selectel.nix  pgvecto-rs.nix
nix/templates/py-uv/: flake.nix  pyproject.toml
test/: poc.sh  rmrf.nix  test.nix  vm.nix
(+147 files in other folders)
